Details
-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.1.18
-
Fix Version/s: 10.1.19
-
Component/s: Galera
-
Labels:
-
Environment:CentOS 6.x or CentOS 7.x
Description
The log-slaves-updates=1 setting suddenly stopped working in 10.1.18.
Attachments
Issue Links
- duplicates
-
MDEV-10960 Replication broken since migrating to MariaDB 10.1
-
- Closed
-
-
MDEV-11128 Asynchronous replication slave to MariaDB Galera Cluster failed after upgrade to 10.1.18 version
-
- Closed
-
- links to