MDEV-10944: GALERA log-slave-updates FAIL after upgrading from 10.1.17 to 10.1.18

thd->variables.option_bits need to be restored after
plugin_thdvar_init() during post initialization of
wsrep threads.