sql/sql_plugin.cc
@@ -4271,7 +4271,13 @@ void wsrep_plugins_post_init()
   {
     if (IF_WSREP(thd->wsrep_applier,1))
     {
+      // Save options_bits as it will get overwritten in plugin_thdvar_init()
+      ulonglong option_bits_saved= thd->variables.option_bits;
+
       plugin_thdvar_init(thd);
+
+      // Restore option_bits
+      thd->variables.option_bits= option_bits_saved;
     }
   }
 
